# healthlynked-provider-pipeline

./: .gitignore  LICENSE  README.md  SUBMISSION.md  WRITEUP.md  pyproject.toml
data/: dataquality_demo.json  example_record.json  synthetic_providers.json
data/fixtures/board/: P0000.json  P0007.json  P0014.json  P0021.json  P0028.json  P0035.json  P0042.json  P0049.json  SHOW-AUTO.json  SHOW-MOVE.json
data/fixtures/npi/: 1018955597.json  1023448347.json  1023904248.json  1030824628.json  1044516691.json  1046557210.json  1111111111.json  1116372651.json  (+46 more)
provider_pipeline/: __init__.py  audit.py  cli.py  compare.py  confidence.py  config.py  cost.py  dataquality.py  dedupe.py  llm.py  normalize.py  pipeline.py  review_queue.py  runner.py  schemas.py  sponsor_example.py  synth.py  synth_fixtures.py  validate.py
provider_pipeline/sources/: board.py  npi.py  snippet.py  website.py
scripts/: duplicate_report.py  fetch_fixtures.py  live_npi_demo.py  make_bulk_fixtures.py  make_cost_chart.py  make_data_quality_report.py  make_review_queue.py  make_synthetic_data.py  measure_realistic_extraction.py  sponsor_example_demo.py
tests/: test_audit.py  test_cli_dataquality.py  test_compare.py  test_confidence.py  test_config.py  test_cost.py  test_dataquality.py  test_dedupe.py  test_golden.py  test_llm.py  test_normalize.py  test_npi.py  test_packaging.py  test_pipeline.py  test_realistic_fixtures.py  test_review_queue.py  test_runner.py  test_schemas.py  test_smoke.py  test_sponsor_contract.py  test_synth.py  test_synth_fixtures.py  test_validate.py  test_web_snippet.py
(+42 files in other folders)
